--- a/ProjectApplication/ProjectApplication.csproj
+++ b/ProjectApplication/ProjectApplication.csproj
@@ -90,6 +90,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="uxUpdateBar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="uxUpdateBar.Designer.cs">
+      <DependentUpon>uxUpdateBar.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="uxInsertBar.resx">
       <DependentUpon>uxInsertBar.cs</DependentUpon>
     </EmbeddedResource>
@@ -120,6 +126,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="uxUpdateBar.resx">
+      <DependentUpon>uxUpdateBar.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
